--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@types/markerclustererplus": "2.1.33",
     "@types/react": "16.4.12",
     "ajv": "5.0.0",
+    "awesome-bootstrap-checkbox": "^1.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "history": "4.7.2",
     "jquery": "3.3.1",
+    "moment": "^2.22.2",
     "node-sass": "4.9.3",
     "node-sass-chokidar": "1.3.3",
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.4.2",
     "react-icons": "^2.2.7",
     "react-native-cards-slider": "^0.1.2",
