--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^2.2.7",
     "react-native-cards-slider": "^0.1.2",
     "react-notification-alert": "0.0.8",
+    "react-responsive-carousel": "^3.1.42",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
     "react-slideshow-image": "^1.0.0",
@@ -60,5 +61,6 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
     "prettier": "^1.13.7"
-  }
+  },
+  "proxy": "http://localhost:8080/"
 }
